--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -122,8 +122,9 @@ $themes: (
     bg-gradient-home: linear-gradient(194.54deg, #e0d0ff -44.32%, rgba(150, 97, 255, 0.06) 44.37%),
     icon-theme-moon: url('/icons/theme-moon-icon-light.svg'),
     icon-theme-sun: url('/icons/theme-sun-icon-light.svg'),
-
     bg-dropdown-multiple: #9e6cff,
+
+    mobile-menu-highlight: #5d36a7,
   ),
   dark: (
     color-white: #fff,
@@ -248,7 +249,8 @@ $themes: (
     bg-gradient-home: linear-gradient(194.54deg, #482688 -44.32%, rgba(46, 19, 210, 0) 44.37%),
     icon-theme-moon: url('/icons/theme-moon-icon-dark.svg'),
     icon-theme-sun: url('/icons/theme-sun-icon-dark.svg'),
-
     bg-dropdown-multiple: #9e6cff,
+
+    mobile-menu-highlight: #5d36a7,
   ),
 );
