--- a/styles/_walletAdapter.scss
+++ b/styles/_walletAdapter.scss
@@ -28,7 +28,7 @@
 }
 
 .wallet-adapter-button:not([disabled]):hover {
-  @include theme-aware("background-color", "wallet-adapter-bg-hover");
+  @include theme-aware('background-color', 'wallet-adapter-bg-hover');
 }
 
 .wallet-adapter-button[disabled] {
@@ -75,7 +75,7 @@
   padding: 6px;
   top: 100%;
   list-style: none;
-  @include theme-aware("background-color", "wallet-adapter-bg");
+  @include theme-aware('background-color', 'wallet-adapter-bg');
   border-radius: $brd-rds-1md;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6);
   opacity: 0;
@@ -105,11 +105,11 @@
   font-size: 14px;
   font-weight: 600;
   height: 24px;
-  @include theme-aware("color", "wallet-adapter-color");
+  @include theme-aware('color', 'wallet-adapter-color');
 }
 
 .wallet-adapter-dropdown-list-item:not([disabled]):hover {
-  @include theme-aware("background-color", "wallet-adapter-bg-hover");
+  @include theme-aware('background-color', 'wallet-adapter-bg-hover');
 }
 
 .wallet-adapter-modal-collapse-button svg {
@@ -183,7 +183,7 @@
   justify-content: center;
 }
 
-@media (max-width: 480px) {
+@media (max-width: $bp-phone) {
   .wallet-adapter-modal-container {
     margin: 1rem;
     min-height: calc(100vh - 2rem); /* 100vh - 2 * margin */
