--- a/styles/mobile/_layoutTopMobile.scss
+++ b/styles/mobile/_layoutTopMobile.scss
@@ -1,6 +1,8 @@
 @media (max-width: $bp-phone) {
     .layout-top-mobile {
-        @include theme-aware('background-color', 'bg-table-hover');
+        //@include theme-aware('background-color', 'mobile-menu-header-bg');
+        //background-size: ;
+        //@include theme-aware('background-color', 'bg-table-hover');
         position: fixed;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         backdrop-filter: blur(7px);
@@ -15,9 +17,11 @@
     }
 
     .top-menu {
+        @include theme-aware('background-color', 'mobile-menu-scrolldown-bg');
         flex-direction: column;
         width: 100vw;
-        margin: 30px 0 0 0;
+        margin: 0;
+        padding: 10px 0 0 0;
 
         li a {
             height: 50px;
@@ -44,14 +48,25 @@
     }
 
     .user-toolbox {
-        width: calc(50vw + 75px);
+        @include theme-aware('background-color', 'mobile-menu-header-bg');
+        width: 100%;
+        height: 70px;
         justify-content: space-between;
         display: flex;
         flex-direction: row-reverse;
-        padding: 14px 0 0 20px;
+        align-items: center;
+        padding: 0 20px;
+        margin: 0;
+
+        .shadow-element {
+            width: 50px;
+            height: 50px;
+        }
     }
 
     .wallet-adapter-button-trigger {
+        //@include theme-aware('background-color', 'color-primary');
+
         @include theme-aware('border-color', 'color-primary');
         @include theme-aware('box-shadow', 'wallet-button-box-shadow');
         width: 150px;
