feat: added correct lightbox

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -21,6 +21,7 @@ $tp-3xl: 98px;
 $tp-xl-mb: 22px;
 $tp-2xl-mb: 48px;
 $tp-3xl-mb: 58px;
+$tp-h2: 24px;
 
 // Font weights
 $wg-lt: 400;
@@ -47,6 +48,7 @@ $mr-lg: 30px;
 $mr-xl: 50px;
 $mr-2xl: 72px;
 $mr-3xl: 114px;
+$mr-lb-h2: 42px;
 
 // Widths
 $pg-full: 100%;
