--- a/styles/mobile/_menuShowButton.scss
+++ b/styles/mobile/_menuShowButton.scss
@@ -1,11 +1,11 @@
 .menu-show-button {
-    position: fixed;
-    top: 0px;
-    right: 16px;
+    //position: fixed;
+    //top: 0px;
+    //right: 16px;
 
-    @media (min-width: calc($bp-phone + 1px)) {
-        display: none;
-    }
+    // @media (min-width: calc($bp-phone + 1px)) {
+    //     display: none;
+    // }
 }
 
 .menu-show-button-hamburger {
