--- a/styles/mobile/_layoutTopMobile.scss
+++ b/styles/mobile/_layoutTopMobile.scss
@@ -7,10 +7,8 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         backdrop-filter: blur(7px);
         border-radius: 0px 0px 8px 8px;
-        transition: top 0.25s ease;
         width: 100vw;
         top: 0;
-
         &.hidden {
             top: -300px;
         }
@@ -22,7 +20,9 @@
         width: 100vw;
         margin: 0;
         padding: 10px 0 0 0;
-
+        transition: top 0.25s ease;
+        position: absolute;
+        top: 70px;
         li a {
             height: 50px;
             width: 100%;
@@ -44,6 +44,10 @@
                 background-color: red;
                 border-radius: $brd-rds-sm;
             }
+        }
+
+        &.mobile-hide{
+            top: -400px;
         }
     }
 
