--- a/styles/_filter.scss
+++ b/styles/_filter.scss
@@ -61,6 +61,7 @@
       margin-bottom: 10px;
       padding: 4px 8px;
       transition: all 0.3s ease-in-out;
+      -moz-appearance: textfield;
 
       &:focus {
         @include theme-aware("outline-color", "color-label");
