--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -121,13 +121,15 @@ $themes: (
     yourNFT-offer-plus-color: #2e13d1,
 
     bg-gradient-home: linear-gradient(194.54deg, #e0d0ff -44.32%, rgba(150, 97, 255, 0.06) 44.37%),
-    icon-theme-moon: url('/icons/theme-moon-icon-light.svg'),
-    icon-theme-sun: url('/icons/theme-sun-icon-light.svg'),
+    icon-theme-moon: url("/icons/theme-moon-icon-light.svg"),
+    icon-theme-sun: url("/icons/theme-sun-icon-light.svg"),
     bg-dropdown-multiple: #9e6cff,
 
-    mobile-menu-header-bg: #482688,
-    mobile-menu-scrolldown-bg: rgba(72, 38, 136, 0.8),
-    mobile-menu-highlight: #5d36a7,
+    mobile-menu-color: #ffffff,
+    mobile-menu-header-bg: #d1c1f3,
+    mobile-menu-scrolldown-bg: rgba(147, 119, 199, 0.8),
+    mobile-menu-highlight: #7752be,
+    mobile-menu-wallet-color: #e00a7f,
   ),
   dark: (
     color-white: #fff,
@@ -251,12 +253,14 @@ $themes: (
     yourNFT-offer-plus-color: #ffffff,
 
     bg-gradient-home: linear-gradient(194.54deg, #482688 -44.32%, rgba(46, 19, 210, 0) 44.37%),
-    icon-theme-moon: url('/icons/theme-moon-icon-dark.svg'),
-    icon-theme-sun: url('/icons/theme-sun-icon-dark.svg'),
+    icon-theme-moon: url("/icons/theme-moon-icon-dark.svg"),
+    icon-theme-sun: url("/icons/theme-sun-icon-dark.svg"),
     bg-dropdown-multiple: #9e6cff,
 
+    mobile-menu-color: #ffffff,
     mobile-menu-header-bg: #482688,
     mobile-menu-scrolldown-bg: rgba(72, 38, 136, 0.8),
     mobile-menu-highlight: #5d36a7,
+    mobile-menu-wallet-color: #e00a7f,
   ),
 );
