Feat/mobile styling (#131)
* Viewport meta tag needs to be in _app.tsx file to work properly

https://nextjs.org/docs/messages/no-document-viewport-meta

* Reverse menu botton

* Make mobile pretty again

* Fix select components overlapping

* Fallback if backdrop-filter isn't available

Firefox: https://caniuse.com/css-backdrop-filter

Co-authored-by: Hoxton <igorkalicinski@gmail.com>

--- a/styles/_menuShowButton.scss
+++ b/styles/_menuShowButton.scss
@@ -1,7 +1,8 @@
 .menu-show-button {
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 0px;
+  right: 0px;
+  z-index: 999;
 
   @media (min-width: calc($bp-phone + 1px)) {
     display: none;
