--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -20,6 +20,7 @@ $themes: (
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
     bg-table: rgba(243, 237, 255, 0.8),
     bg-table-hover: #e5d9ff,
+    bg-table-hover-opaque: rgba(46, 19, 210, 0.95),
     single-offer-heading: #e00a7f,
     single-offer-meta-bg: #b4ace2,
     single-offer-meta-label: #ffffff,
@@ -147,6 +148,7 @@ $themes: (
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
     bg-table: rgba(33, 13, 72, 0.75),
     bg-table-hover: rgba(72, 38, 136, 0.75),
+    bg-table-hover-opaque: rgba(72, 38, 136, 0.95),
     single-offer-heading: #ffffff,
     single-offer-meta-bg: #482688,
     single-offer-meta-label: #8c70bf,
