--- a/styles/_layoutTopMobile.scss
+++ b/styles/_layoutTopMobile.scss
@@ -1,22 +1,22 @@
 @media (max-width: $bp-phone) {
   .layout-top-mobile {
-    @include theme-aware("background-color", "bg-table-hover");
     position: fixed;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(7px);
-    border-radius: 0 0 8px 8px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0px 0px 8px 8px;
     transition: top 0.25s ease;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     top: 0;
+    z-index: 1;
 
     &.hidden {
-      top: -200px;
+      top: -100%;
     }
   }
 
   .top-menu {
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     margin: 30px 0 0 0;
 
     li a {
@@ -27,7 +27,6 @@
       line-height: 30px;
 
       &.active {
-        @include theme-aware("background-color", "bg-table-hover");
         @include theme-aware("color", "color-label");
       }
     }
@@ -39,6 +38,7 @@
     display: flex;
     flex-direction: row-reverse;
     padding: 0 0 0 20px;
+    margin: $mr-sm;
   }
 
   .wallet-adapter-button-trigger {
@@ -72,5 +72,21 @@
 @media (min-width: calc($bp-phone + 1px)) {
   .layout-top-mobile {
     display: none;
+  }
+}
+
+@supports (backdrop-filter: blur(7px)) {
+  .layout-top-mobile {
+    @include theme-aware("background-color", "bg-table-hover");
+    backdrop-filter: blur(7px);
+  }
+}
+
+@supports not (backdrop-filter: blur(7px)) {
+  .layout-top-mobile {
+    @include theme-aware("background-color", "bg-table-hover-opaque");
+  }
+  .main {
+    filter: blur(20px);
   }
 }
