--- a/styles/_selects.scss
+++ b/styles/_selects.scss
@@ -8,6 +8,7 @@
   border-radius: 2px;
   position: relative;
   display: inline-flex;
+  cursor: pointer;
 
   &__selected {
     width: 100%;
@@ -15,7 +16,6 @@
     align-items: center;
     padding: $mr-tn $mr-tn $mr-tn $mr-sm;
     justify-content: space-between;
-    z-index: 2;
   }
 
   ul.custom-select__options {
@@ -65,6 +65,7 @@
   border-radius: $brd-rds-2tn;
   position: relative;
   display: inline-flex;
+  cursor: pointer;
 
   &__title {
     display: inline-flex;
@@ -109,6 +110,7 @@
     border-radius: $brd-rds-1md;
     padding: 15px 32px;
     min-width: 300px;
+    z-index: 2;
 
     &.hidden {
       visibility: hidden;
