--- a/styles/footer/_footer.scss
+++ b/styles/footer/_footer.scss
@@ -16,6 +16,7 @@
 
   @media (max-width: $bp-tablet) {
     width: 100vw;
+    flex-direction: column;
   }
 }
 
@@ -66,6 +67,10 @@
 
   .community-section {
     text-align: center;
-    padding: 0 0 24px 0;
+  }
+
+  .footer-list {
+    flex-direction: column;
+    gap: $mr-sm;
   }
 }
