--- a/styles/main.scss
+++ b/styles/main.scss
@@ -52,7 +52,7 @@ body {
   @include theme-aware("background-color", "color-background");
   @include theme-aware("background-image", "bg-gradient-home");
   @include theme-aware("color", "color-primary");
-  background-size: 100vw 100vh;
+  // background-size: 100vw 100vh;
   font-family: "Red Hat Display", sans-serif;
   background-attachment: fixed;
   box-sizing: border-box;
@@ -72,7 +72,8 @@ body {
   padding-top: $mr-lg;
 
   @media (max-width: $bp-tablet) {
-    width: 100vw;
+    width: 100%;
+    padding: $mr-sm;
   }
 
   .devnet {
