--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -40,10 +40,12 @@
 .icon--cross {
   @include theme-aware("background-image", "icon-cross");
 }
+
 .icon--cross--black {
   background-image: url("/icons/cross-icon-black.svg");
   background-size: contain;
 }
+
 .icon--cross--primary {
   background-image: url("/icons/cross-icon-primary.svg");
   background-size: contain;
@@ -183,12 +185,19 @@
   background-image: url("/icons/owner-icon.svg");
 }
 
-.icon--theme--moon {
-  @include theme-aware("background-image", "icon-theme-moon");
-}
+.icon--theme {
+  position: absolute;
+  z-index: 1;
 
-.icon--theme--sun {
-  @include theme-aware("background-image", "icon-theme-sun");
+  &--moon {
+    background-image: url("/icons/theme-moon-icon-light.svg");
+    left: 0;
+  }
+
+  &--sun {
+    background-image: url("/icons/theme-sun-icon-dark.svg");
+    right: 0.5px;
+  }
 }
 
 .icon--tn {
