--- a/styles/mobile/_footerMobile.scss
+++ b/styles/mobile/_footerMobile.scss
@@ -1,6 +1,5 @@
 @media (max-width: $bp-phone) {
-  // mobile footer WIP - destroys layout
-  .footer {
-    display: none;
+  .footer-links {
+    flex-direction: column;
   }
 }
