--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -32,7 +32,7 @@ $themes: (
     info-green: #7fbe20,
     icon-eye: url("/icons/eye-icon-white.svg"),
     nft-pill-bg: #9480bf,
-    input-number-bg: #ffffff,
+    input-bg: #ffffff,
     input-number-color: #210d48,
     input-number-button-bg: #e2d9f6,
     checkbox-checked-bg: #df0b7f,
@@ -166,7 +166,7 @@ $themes: (
     info-green: #7fbe20,
     icon-eye: url("/icons/eye-icon-white.svg"),
     nft-pill-bg: #371c6b,
-    input-number-bg: #210d48,
+    input-bg: #210d48,
     input-number-color: #ffffff,
     input-number-button-bg: #331c62,
     checkbox-checked-bg: #df0b7f,
