Working Wallet Balance and style changes

--- a/styles/_NFTCollateral.scss
+++ b/styles/_NFTCollateral.scss
@@ -162,7 +162,7 @@
   border: 0;
   border-radius: 2px;
   width: 200px;
-  font-size: 18px;
+  font-size: $tp-lg;
   appearance: none;
   margin-left: $mr-sm;
 
