--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -30,7 +30,7 @@ $themes: (
     wallet-button-box-shadow: 0px 0px 4px #e00a7f,
     info-red: #b82626,
     info-green: #7fbe20,
-    icon-eye: url("/icons/eye-icon-white.svg"),
+    icon-eye: url("/icons/eye-icon-light.svg"),
     nft-pill-bg: #9480bf,
     input-bg: #ffffff,
     input-number-color: #210d48,
@@ -51,7 +51,9 @@ $themes: (
     wallet-adapter-bg: #ffffff,
     wallet-adapter-bg-hover: #d1c1f3,
     wallet-adapter-color: #210d48,
-
+    icon-copy: url("/icons/copy-icon-light.svg"),
+    icon-switch: url("/icons/switch-icon-light.svg"),
+    icon-disconnect: url("/icons/disconnect-icon-light.svg"),
     selected-option-bg: #d1c1f3,
     hover-option-bg: rgba(243, 237, 255, 0.8),
     status-proposed-bg: rgba(44, 156, 89, 0.3),
@@ -164,7 +166,7 @@ $themes: (
     wallet-button-box-shadow: 0px 0px 4px #e00a7f,
     info-red: #b82626,
     info-green: #7fbe20,
-    icon-eye: url("/icons/eye-icon-white.svg"),
+    icon-eye: url("/icons/eye-icon-dark.svg"),
     nft-pill-bg: #371c6b,
     input-bg: #210d48,
     input-number-color: #ffffff,
@@ -185,7 +187,9 @@ $themes: (
     wallet-adapter-bg: #210d48,
     wallet-adapter-bg-hover: #3e1f78,
     wallet-adapter-color: #ffffff,
-
+    icon-copy: url("/icons/copy-icon-dark.svg"),
+    icon-switch: url("/icons/switch-icon-dark.svg"),
+    icon-disconnect: url("/icons/disconnect-icon-dark.svg"),
     status-proposed-bg: rgba(0, 215, 86, 0.25),
     status-proposed-color: #00d756,
 
