--- a/styles/_walletAdapter.scss
+++ b/styles/_walletAdapter.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
-
 .wallet-adapter-button {
   @include theme-aware("color", "color-content");
   cursor: pointer;
@@ -7,11 +5,10 @@
   border: none;
   display: flex;
   align-items: center;
-  font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 600;
   height: 48px;
-  width: 200px;
+  width: 220px;
   line-height: 48px;
   padding: 0 24px;
   border-radius: 4px;
@@ -70,21 +67,31 @@
 }
 
 .wallet-adapter-dropdown-list {
+  @include theme-aware("background-color", "wallet-adapter-bg");
+
+  @media (min-width: calc($bp-phone + 1px)) {
+    width: 100%;
+  }
+
+  @media (max-width: $bp-phone) {
+    width: 90vw;
+    margin: 0 auto;
+  }
+
   position: absolute;
   z-index: 99;
   display: grid;
   grid-template-rows: 1fr;
   grid-row-gap: 2px;
   padding: 6px;
-  top: 100%;
+  top: calc(100% + 10px);
   list-style: none;
-  @include theme-aware("background-color", "wallet-adapter-bg");
   border-radius: $brd-rds-1md;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
   opacity: 0;
   visibility: hidden;
+  gap: $mr-sm;
   transition: opacity 200ms ease, transform 200ms ease, visibility 200ms;
-  font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .wallet-adapter-dropdown-list-active {
@@ -93,26 +100,47 @@
 }
 
 .wallet-adapter-dropdown-list-item {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  @include theme-aware("color", "wallet-adapter-color");
+  justify-content: space-between;
+  display: inline-flex;
   align-items: center;
   border: none;
   outline: none;
-  cursor: pointer;
   white-space: nowrap;
   box-sizing: border-box;
-  padding: 0 22px;
+  padding: 0 $mr-sm;
+  height: $d-lg;
   width: 100%;
   border-radius: $brd-rds-2md;
-  font-size: 14px;
-  font-weight: 600;
-  height: 24px;
-  @include theme-aware("color", "wallet-adapter-color");
+  font-size: $tp-md;
+  font-weight: $wg-lt;
 }
 
-.wallet-adapter-dropdown-list-item:not([disabled]):hover {
+.wallet-adapter-dropdown-list-item.hover {
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.wallet-adapter-dropdown-list-item.hover:not([disabled]):hover {
   @include theme-aware("background-color", "wallet-adapter-bg-hover");
+}
+
+.wallet-adapter-dropdown-list-item.divider {
+  @include theme-aware("border-top-color", "color-accent");
+  margin: auto;
+  width: 90%;
+  border-top: 1px solid;
+  border-radius: 0;
+  padding: 0;
+  height: 0;
+}
+
+.wallet-adapter-dropdown-list-item.balance__item {
+  @include theme-aware("background-color", "wallet-adapter-bg-hover");
+}
+
+.wallet-adapter-dropdown-list-item.balance {
+  justify-content: center;
 }
 
 .wallet-adapter-modal-collapse-button svg {
@@ -143,14 +171,14 @@
 }
 
 .wallet-adapter-modal-button-close {
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 18px;
-  right: 18px;
-  padding: 12px;
-  cursor: pointer;
+  top: $d-md;
+  right: $d-md;
+  padding: $mr-sm;
   background: #1a1f2e;
   border: none;
   border-radius: 50%;
@@ -162,7 +190,7 @@
 
 .wallet-adapter-modal-button-close svg {
   fill: #777;
-  transition: fill 200ms ease 0s;
+  transition: fill 0.2s ease 0s;
 }
 
 .wallet-adapter-modal-button-close:hover svg {
@@ -205,7 +233,6 @@
   border-radius: 10px;
   background: #10141f;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
-  font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   flex: 1;
 }
 
@@ -225,7 +252,7 @@
 
 @media (max-width: 374px) {
   .wallet-adapter-modal-title {
-    font-size: 18px;
+    font-size: $tp-lg;
   }
 }
 
@@ -239,7 +266,7 @@
 .wallet-adapter-modal-list .wallet-adapter-button {
   font-weight: 400;
   border-radius: 0;
-  font-size: 18px;
+  font-size: $tp-lg;
 }
 
 .wallet-adapter-modal-list .wallet-adapter-button-end-icon,
@@ -288,13 +315,13 @@
 }
 
 .wallet-adapter-modal-middle-button {
-  display: block;
   cursor: pointer;
+  display: block;
   margin-top: 48px;
   width: 100%;
   background-color: #512da8;
   padding: 12px;
-  font-size: 18px;
+  font-size: $tp-lg;
   border: none;
   border-radius: 8px;
   color: #fff;
