adjusted gridview for mobile and tablet (#138)
* adjusted gridview for mobile and tablet

* Fixes

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,6 +50,7 @@
 @import "./mobile/footerMobile";
 @import "./mobile/layoutTopMobile";
 @import "./mobile/offersPage/offersTopMobile";
+@import "./mobile/offersPage/offersGridMobile";
 
 body {
   @include theme-aware("background-color", "color-background");
