--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,6 +26,7 @@
 @import "./showOnHover";
 @import "./solscanExplorer";
 @import "./popups";
+@import "./circularProgressBar";
 
 @import "./singleOffer/header";
 @import "./singleOffer/offer";
