--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,6 +40,10 @@
 @import "./myOffers/myOffersTop";
 @import "./myOffers/myOffersNftList";
 
+@import "./profilePage/header";
+@import "./profilePage/page";
+@import "./profilePage/stakerow";
+
 @import "./lightboxBase";
 @import "./NFTCollateral";
 @import "./createLoan";
