--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -121,6 +121,9 @@
   &--USDC {
     @include theme-aware("background-image", "icon-USDC");
   }
+  &--UNLOC {
+    @include theme-aware("background-image", "icon-UNLOC");
+  }
 }
 
 .icon--fb {
