--- a/styles/profilePage/_page.scss
+++ b/styles/profilePage/_page.scss
@@ -9,7 +9,7 @@
   &__header {
     display: flex;
     width: 100%;
-    gap: 16px 20px;
+    gap: $mr-2rem 20px;
     flex-wrap: wrap;
 
     & > .col {
@@ -21,6 +21,6 @@
   &__stake-accounts {
     display: flex;
     flex-direction: column;
-    row-gap: 26px;
+    row-gap: $mr-md;
   }
 }
