--- a/styles/profilePage/_stakerow.scss
+++ b/styles/profilePage/_stakerow.scss
@@ -10,30 +10,33 @@
     @include theme-aware("border-color", "profile-separator");
   }
 
-  // Id column has special padding
-  & > *:first-child {
-    padding: $mr-2rem $mr-tn;
-    flex: 0 1 50px;
-  }
-
+  // Third element can grow
   & > *:nth-child(3) {
     flex-grow: 1;
   }
+
+  // Last element of the row is a bit bigger
   & > *:last-child {
     flex: 0 1 460px;
   }
 
   &__col {
+    $self: &;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     padding: $mr-2rem $mr-md 8px;
 
-    &.duration {
+    &--id {
+      @extend #{ $self };
+      padding: $mr-2rem $mr-tn;
+      flex: 0 1 50px;
+    }
+
+    &--duration {
+      display: grid;
+      padding: $mr-2rem $mr-sm 8px;
       grid-template-rows: auto;
       grid-template-columns: repeat(3, 1fr);
-      grid-auto-flow: column;
-      padding-left: $mr-sm;
-      padding-right: $mr-sm;
 
       & > *.stakerow__title {
         height: 100%;
@@ -66,30 +69,26 @@
     margin: auto;
   }
 
+  &__id,
+  &__address,
+  &__amount,
+  &__apr {
+    font-weight: $wg-hv;
+  }
+
   &__title {
     text-transform: uppercase;
     font-size: $tp-sm;
-    align-self: start;
-    justify-self: stretch;
   }
 
   &__id {
     grid-row: 2 / 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: $wg-hv;
     @include theme-aware("color", "color-userLevel");
     font-size: 24px;
   }
 
-  &__address {
-    font-weight: $wg-hv;
-  }
-
   &__amount {
     display: flex;
-    font-weight: $wg-hv;
     font-size: 24px;
 
     .icon {
@@ -107,10 +106,6 @@
       font-size: $tp-sm;
       color: #997cd0;
     }
-  }
-
-  &__apr {
-    font-weight: $wg-hv;
   }
 
   &__actions {
